[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "plucker"
description = "validate, map and reduce regularly structured data into dataclasses"
version = "0.1.0"
license = "MIT"
authors = []
readme = "README.md"
repository = "https://github.com/takkaria/plucker"
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
flake8-pytest-style = "^1.4"
safety = "^1.10"
pytest = "^6.2"
pytest-cov = "^2.11"
pytest-randomly = "^3.5"
sphinx = "^3.5"
sphinx-autodoc-typehints = "^1.11"
doc8 = "^0.8"
m2r2 = "^0.2"
tomlkit = "^0.7"
flake8 = "^3.9.0"
black = "^20.8b1"
flake8-docstrings = "^1.6.0"
